# arlo_mejorado_precision_llantas

./: .directory  README.md
arlo_mejorado/: .directory  CMakeLists.txt  package.xml
arlo_mejorado/launch/: arena.launch  arena2.launch  main.launch  main_pista_herradura copy.launch  main_pista_herradura.launch  main_pista_herradura_derecha.launch  main_pista_herradura_dos_vueltas.launch  one_robot.launch  robots.launch
arlo_mejorado/models/: .directory
arlo_mejorado/models/arlodrive/: .directory  model.config  model.sdf
arlo_mejorado/models/arlodrive/meshes/: arlo_base.dae
arlo_mejorado/worlds/: arena.world  arena2.world  laberinto_01.world  laberinto_01.xml  pista_herradura.world  pista_herradura.xml  pista_herradura2.world  pista_herradura_derecha.world  pista_herradura_dos_vueltas.world
piezas_detalles/: arlo_base.blend  arlo_base.blend1  arlo_completo.blend  arlo_sensor.blend  arlo_sensor.blend1  arlo_sensor.dae  arlo_wheel.blend  arlo_wheel.blend1  arlo_wheel.stl  arlo_wheel_mejorado.blend  arlo_wheel_mejorado.blend1  arlo_wheel_mejorado.dae
